--- a/Projetize.App/_Imports.razor
+++ b/Projetize.App/_Imports.razor
@@ -9,5 +9,8 @@
 @using Projetize.App
 @using Projetize.App.Layout
 
+@using Projetize.App.Models
 
-@using MudBlazor;
+@* mudBlazor *@
+@using MudBlazor
+@using MudBlazor.Services
