fix login layout

--- a/Projetize.App/Pages/Login.razor
+++ b/Projetize.App/Pages/Login.razor
@@ -7,28 +7,32 @@
 
 <PageTitle>Login</PageTitle>
 
-<MudContainer MaxWidth="MaxWidth.Small" Class="d-flex justify-content-around align-center" Style="min-height: 100vh;">
-    <MudPaper Elevation="4" Class="pa-4" Style="width: 400px">
+<MudContainer MaxWidth="MaxWidth.False" Class="login-container">
+    <MudPaper Elevation="4" Class="login-paper">
+        <MudImage Src="images/logo.png" Alt="Logo" Class="login-logo" />
+        <MudText Typo="Typo.h6" Align="Align.Center" Class="login-title">
+            Acesse sua conta
+        </MudText>
 
-        <MudImage Src="images/logo.png" Alt="Tasker Logo" Class="mx-auto mb-4" Style="display:block; max-width: 150px;" />
-
-        <MudText Typo="Typo.h5" Align="Align.Center">Login</MudText>
         <MudForm @ref="form" Model="@loginModel" OnValidSubmit="HandlerLogin">
-            <MudTextField Label="Username" @bind-Value="loginModel.Login" For="@(() => loginModel.Login)" Required="true" Variant="Variant.Filled" FullWidth="true" />
-            <MudTextField Label="Password" @bind-Value="loginModel.Password" For="@(() => loginModel.Password)" Required="true" Variant="Variant.Filled" FullWidth="true" InputType="InputType.Password"/>
+            <MudTextField Label="Username" @bind-Value="loginModel.Login" For="@(() => loginModel.Login)" Required="true" Variant="Variant.Filled" FullWidth="true" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Person" />
+            <MudTextField Label="Password" @bind-Value="loginModel.Password" For="@(() => loginModel.Password)" Required="true" Variant="Variant.Filled" FullWidth="true" InputType="InputType.Password" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Lock" />
+
             <MudButton Type="Submit" Color="Color.Primary" Variant="Variant.Filled" FullWidth="true" Class="mt-4" OnClick="HandlerLogin">
-                Login
+                Entrar
             </MudButton>
+
             @if (loginError)
             {
                 <MudAlert Severity="Severity.Error" Class="mt-4">
-                    Invalid username or password.
+                    Usuário ou senha inválidos.
                 </MudAlert>
             }
+            <MudText Align="Align.Center" Class="mt-3">
+                <MudLink Href="/forgot-password">Forgot password?</MudLink>
+            </MudText>
         </MudForm>
-        <MudText Align="Align.Center" Class="mt-3">
-            <MudLink Href="/forgot-password">Forgot password?</MudLink>
-        </MudText>
+
     </MudPaper>
 </MudContainer>
 
@@ -44,5 +48,7 @@
 
         if (success)
             Navigation.NavigateTo("/");
+        if (!success)
+            loginError = true;
     }
 }
