--- a/Projetize.App/_Imports.razor
+++ b/Projetize.App/_Imports.razor
@@ -9,6 +9,8 @@
 @using Projetize.App
 @using Projetize.App.Layout
 @using Projetize.App.Models
+@using Microsoft.JSInterop;
+
 
 @* mudBlazor *@
 @using MudBlazor
