--- a/Projetize.App/Pages/User/Login.razor
+++ b/Projetize.App/Pages/User/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 @using Projetize.App.Models.Login
 @using Projetize.App.Services
+@using Projetize.App.Services.Auth
 @layout LoginLayout
 @inject IAuthService AuthService
 @inject NavigationManager Navigation
@@ -9,7 +10,7 @@
 
 <section @onkeyup="KeyPressHandled">
     <MudContainer Fixed="true" Class="d-flex justify-center align-center" Style="min-height: 100vh;">
-        <MudPaper Elevation="8" Class="pa-6" Style="width:100%; max-width:400px; border-radius: 20px; margin-top: -70px;">
+        <MudPaper Elevation="8" Class="pa-6" Style="width:100%; max-width:400px; border-radius: 20px; margin-top: 1rem;">
 
             <div class="d-flex justify-center mb-4">
                 <img src="/Images/logo.png" alt="Projetize Logo" style="height: 200px;" class="logo" />
@@ -47,7 +48,7 @@
             <MudText Align="Align.Center" Class="mt-3">
                 <MudLink Href="/forgot-password">Esqueceu a senha?</MudLink>
                 <br />
-                <hr />
+                <MudDivider />
                 <MudLink Href="/register">Novo cadastro</MudLink>
             </MudText>
         </MudPaper>
